--- a/styles/globals.css
+++ b/styles/globals.css
@@ -1,3 +1,6 @@
-@tailwind base;
-@tailwind components;
-@tailwind utilities;
+html {
+  --color-black: #353e4a;
+  --color-green: #9acb34;
+  --color-white: #fbf8ef;
+  --color-blue: #04d0d9;
+}
